--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -31,4 +31,4 @@ blockquote
   border-left .2rem solid #42b983
   margin 1rem 0
   padding .5rem 0 .5rem 1rem
-  background-color #f3f5f7
+  background-color rgba(255,243,212,0.8)
