--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,9 +1,11 @@
 @import '~prismjs/themes/prism.css'
 
+.page
+  padding-left 0
 .theme-default-content.content__default
   padding-left 8rem
 .side-anchor
   white-space nowrap
 .navbar
   border-bottom none
-  box-shadow 0 8px 24px -2px rgb(0 0 0 / 5%)
+  box-shadow 0 8px 24px -2px rgb(0, 0, 0 / 5%)
