--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -4,8 +4,23 @@
   padding-left 0
 .theme-default-content.content__default
   padding-left 8rem
+section.side-anchor
+  top 100px
+  border-left 0
+  padding-left 20px
+  max-height 80%
+
 .side-anchor
-  white-space nowrap
+  white-space nowrap 
+  ul
+    padding 0
+  li
+    line-height 2
+  .side-anchor-link.active
+    padding-left 8px
+    margin-left -12px
+    border-left 4px solid #42b883
+
 .navbar
   border-bottom none
-  box-shadow 0 8px 24px -2px rgb(0, 0, 0 / 5%)
+  box-shadow 0 8px 24px -2px rgba(0, 0, 0, 0.05)
